--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,20 @@ language: perl
 matrix:
     fast_finish: true
 perl:
-    - "5.22"
-    - "5.20"
-    - "5.18"
-    - "5.16"
-    - "5.14"
-    - "5.12"
-    - "5.10"
+   - '5.24'
+   - '5.22'
+   - '5.20'
+   - '5.18'
+   - '5.16'
+   - '5.14'
 before_install:
-    - "cpanm -qn List::MoreUtils Moo Path::Tiny Text::CSV Test::More Test::Warnings Test::Requires::Git Devel::Cover::Report::Codecov"
+   - git config --global user.name "TravisCI"
+   - git config --global user.email $HOSTNAME":not-for-mail@travis-ci.org"
+install:
+   - cpanm --quiet --notest Dist::Zilla Dist::Zilla::App::Command::cover App::cpm Devel::Cover::Report::Codecov
+   - cpm install -w 2 --mirror=http://cpan.cpantesters.org/ -g $(dzil authordeps --missing)
+   - cpm install -w 2 --mirror=http://cpan.cpantesters.org/ -g $(dzil listdeps --author --missing)
+
 script:
-    perl Makefile.PL && cover -test -report codecov
+   - dzil smoke --release --author && dzil cover -test -report codecov && dzil xtest
+
